<resources>
    <string name="app_name">Expense-Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="farzana_nokshi">Farzana Nokshi</string>
    <string name="dashboard">Dashboard</string>
    <string name="pie_chart_expense">Pie Chart Expense</string>
    <string name="ExpenseTracker">Expense Tracker</string>
    <string name="pie_chart_income">Pie Chart Income</string>
    <string name="amount">Amount:</string>
    <string name="amount2">amount</string>
    <string name="type">Type:</string>
    <string name="type1">type</string>
    <string name="note">Note:</string>
    <string name="note1">note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="income">Income</string>
    <string name="bdt_10000_00">BDT. 10000.00</string>
    <string name="expense">Expense</string>
    <string name="income1">INCOME:</string>
    <string name="expense1">Expense:</string>
    <string name="nothing_to_do">nothing to do</string>
    <string name="job">Job</string>
    <string name="bdt_7000">BDT. 7000</string>
    <string name="january_27_2023">JAN 27, 2023</string>
    <string name="extra_income">Extra Income</string>
    <string name="_12444">12444</string>
</resources>