<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_incomeDate"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/january_27_2023"
            android:textColor="@color/light_red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_incomeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_toEndOf="@id/tv_incomeDate"
            android:text="@string/job"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_incomeNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_incomeType"
            android:layout_marginStart="28dp"
            android:layout_toEndOf="@id/tv_incomeDate"
            android:text="@string/extra_income"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_incomeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:text="@string/_12444"
            android:textColor="@color/light_red"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>